// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Regular"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 (New) Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 28,
      "lineHeight": 32,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 28,
        "lineHeight": 32,
      },
      Object {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 (New) Snapshot 2`] = `
<Text
  color="white"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 28,
      "lineHeight": 32,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 28,
        "lineHeight": 32,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 26,
        "lineHeight": 32,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 26,
      "lineHeight": 32,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 26,
        "lineHeight": 32,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 (New) Snapshot 1`] = `
<Text
  color="black"
  defaultColor="black"
  defaultWeight="Regular"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 26,
      "lineHeight": 30,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 26,
        "lineHeight": 30,
      },
      Object {
        "color": "#0E0F13",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 20,
      "lineHeight": 24,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 20,
        "lineHeight": 24,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 (New) Snapshot 1`] = `
<Text
  color="bluegreyDark"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 18,
      "lineHeight": 26,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
        "lineHeight": 26,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 (New) Snapshot 2`] = `
<Text
  color="bluegreyLight"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 18,
      "lineHeight": 26,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
        "lineHeight": 26,
      },
      Object {
        "color": "#CCD4DC",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 (New) Snapshot 3`] = `
<Text
  color="white"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 18,
      "lineHeight": 26,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
        "lineHeight": 26,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 (New) Snapshot 4`] = `
<Text
  color="white"
  font="ReadexPro"
  fontStyle={
    Object {
      "fontSize": 18,
      "lineHeight": 26,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
        "lineHeight": 26,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Readex Pro",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 (New) Snapshot 5`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  color="bluegreyLight"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 18,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 18,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  color="blue"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  color="bluegreyDark"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  color="bluegrey"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 8`] = `
<Text
  color="bluegreyLight"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 9`] = `
<Text
  color="white"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "lineHeight": 22,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
  weightColorFactory={[Function]}
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 5`] = `
<Text
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 6`] = `
<Text
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 7`] = `
<Text
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 4`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#C02927",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 14,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 14,
      },
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  color="blue"
  defaultColor="blue"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    Object {
      "fontSize": 16,
      "textDecorationLine": "underline",
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
        "textDecorationLine": "underline",
      },
      Object {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components Monospace Snapshot 1`] = `
<Text
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="RobotoMono"
  fontStyle={
    Object {
      "fontSize": 16,
    }
  }
  style={
    Array [
      Object {
        "fontSize": 16,
      },
      Object {
        "color": "#475A6D",
        "fontFamily": "Roboto Mono",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;
